--- a/12 - Key Sequence Detection/index-START.html
+++ b/12 - Key Sequence Detection/index-START.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Key Detection</title>
-  <script type="text/javascript" src="https://www.cornify.com/js/cornify.js"></script>
-</head>
-<body>
-<script>
-</script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Key Detection</title>
+    <script
+      type="text/javascript"
+      src="https://www.cornify.com/js/cornify.js"
+    ></script>
+  </head>
+  <body>
+    <script>
+      const keys = [];
+      const secret = "secret";
+
+      // Method 1
+      // window.addEventListener("keyup", (event) => {
+      //   console.log(event.key);
+      //   if (keys.length === secret.length) {
+      //     keys.shift();
+      //   }
+      //   keys.push(event.key);
+
+      //   if (keys.join("").includes(secret)) {
+      //     cornify_add();
+      //   }
+      //   console.log(keys);
+      // });
+
+      // Method 2
+      window.addEventListener("keyup", (event) => {
+        console.log(event.key);
+        keys.push(event.key);
+        keys.splice(-secret.length - 1, keys.length - secret.length);
+        if (keys.join("").includes(secret)) {
+          cornify_add();
+        }
+        console.log(keys);
+      });
+    </script>
+  </body>
 </html>
